Refactoring domain objects, styles and workflow

--- a/src/views/FivePlayerGame/FivePlayerGame.scss
+++ b/src/views/FivePlayerGame/FivePlayerGame.scss
@@ -1,6 +1,5 @@
 
-@import "~materialize-css/sass/materialize";
-
+@import "../../../node_modules/materialize-css/sass/materialize";
 
 .control {
   margin-top: 30px;
