--- a/src/views/FivePlayerGame/Gameplay/Scoreboard.scss
+++ b/src/views/FivePlayerGame/Gameplay/Scoreboard.scss
@@ -1,9 +1,3 @@
-#scoreboard {
-  td {
-    padding: 5px 10px;
-  }
-
-  th {
-    padding: 5px 10px;
-  }
+#scoreboard-header {
+  margin-top: 20px;
 }
