--- a/src/views/FivePlayerGame/Gameplay/Gameplay.scss
+++ b/src/views/FivePlayerGame/Gameplay/Gameplay.scss
@@ -1,14 +1,18 @@
-#gametable {
-  td {
-     padding: 5px 10px;
-   }
-
-  th {
-    padding: 5px 10px;
-  }
+#gameplay-header {
+  margin-top: 10px;
 }
 
 button.score-button {
   margin-right: 3px;
   margin-left: 3px;
+}
+
+#gameplay {
+
+  tr {
+    th:first-child, th:last-child,
+    td:first-child, td:last-child {
+      padding: 8px 16px !important;
+    }
+  }
 }
