--- a/src/views/FivePlayerGame/Gameplay/Gameplay.scss
+++ b/src/views/FivePlayerGame/Gameplay/Gameplay.scss
@@ -12,7 +12,12 @@ button.score-button {
   tr {
     th:first-child, th:last-child,
     td:first-child, td:last-child {
-      padding: 8px 16px !important;
+      padding: 4px 12px !important;
+    }
+
+    th:nth-child(2),
+    td:nth-child(2) {
+      padding: 4px 12px !important;
     }
   }
 }
