--- a/src/views/FivePlayerGame/Gameplay/Gameplay.scss
+++ b/src/views/FivePlayerGame/Gameplay/Gameplay.scss
@@ -17,7 +17,7 @@ button.score-button {
 
     th:nth-child(2),
     td:nth-child(2) {
-      padding: 4px 12px !important;
+      padding: 4px !important;
     }
   }
 }
