--- a/src/views/FivePlayerGame/Gameplay/Gameplay.scss
+++ b/src/views/FivePlayerGame/Gameplay/Gameplay.scss
@@ -1,23 +1,26 @@
 #gameplay-header {
-  margin-top: 10px;
+  margin-top: 20px;
 }
 
 button.score-button {
   margin-right: 3px;
   margin-left: 3px;
-}
+  &.primary:focus {
+    background-color: #3f51b5;
+  }
 
-#gameplay {
+  &.default:focus {
+    background-color: #e0e0e0;
+  }
 
-  tr {
-    th:first-child, th:last-child,
-    td:first-child, td:last-child {
-      padding: 4px 12px !important;
-    }
-
-    th:nth-child(2),
-    td:nth-child(2) {
-      padding: 4px !important;
-    }
+  &.secondary:focus {
+    background-color: #f50057;
   }
 }
+
+.gameplay-item {
+  text-align: center;
+}
+
+
+
